<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".StudentViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/activity_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/profileImgDisc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_account_circle" />

            <TextView
                android:id="@+id/name_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loin"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/rollNo_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enroll"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/name_set"
                app:layout_constraintStart_toStartOf="@+id/name_set"
                app:layout_constraintTop_toBottomOf="@+id/name_set" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rollNo_set">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@style/CardView.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@mipmap/ic_3"
                    android:drawablePadding="20dp"
                    android:paddingStart="20dp"
                    android:background="@drawable/btn_background_1"
                    android:text="@string/basicInfo"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="11dp"
                        android:text="@string/email"
                        android:theme="@style/myTheme1" />

                    <TextView
                        android:id="@+id/email_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="11dp"
                        android:theme="@style/myTheme1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="11dp"
                        android:text="@string/branch"
                        android:theme="@style/myTheme1" />

                    <TextView
                        android:id="@+id/branch_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="11dp"
                        android:theme="@style/myTheme1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="11dp"
                        android:text="@string/semester"
                        android:theme="@style/myTheme1" />

                    <TextView
                        android:id="@+id/semester_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="11dp"
                        android:theme="@style/myTheme1" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_attendance_view"
                    style="@style/CardView.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_background_2"
                    android:drawableStart="@mipmap/ic_2"
                    android:drawablePadding="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/attendance"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_notification_view"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:drawableStart="@mipmap/ic_4"
                    android:drawablePadding="20dp"
                    android:paddingStart="20dp"
                    android:background="@drawable/btn_background_2"
                    android:text="@string/notification"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button__background"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:theme="@style/myTheme1"
            android:text="@string/logout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>